# bd-automation-suite

./: .env.example  CLAUDE.md  README.md  pyproject.toml
config/: contact_discovery.yaml  enrichment.yaml  followup_rules.yaml  outreach.yaml  reporting.yaml  scoring.yaml  stream_a.yaml  stream_b.yaml  stream_c.yaml
config/clients/: _template.yaml
modules/contact_discovery/: linkedin_queue.py  main.py  ranker.py
modules/contact_discovery/finders/: base.py  hunter.py  website.py
modules/contact_discovery/tests/: test_contact_discovery.py
modules/followup_scheduler/: main.py  notifier.py  rule_engine.py
modules/followup_scheduler/tests/: test_rule_engine.py
modules/lead_enrichment/: main.py
modules/lead_enrichment/adapters/: base.py  company_website.py  google_maps_detail.py  market_presence_check.py  news_search.py  trade_data_detail.py
modules/lead_enrichment/tests/: test_lead_enrichment.py
modules/lead_scoring/: main.py  scorer.py
modules/lead_scoring/tests/: test_scorer.py
modules/outreach_drafter/: drafter.py  main.py
modules/outreach_drafter/tests/: test_outreach_drafter.py
modules/pipeline_reporter/: main.py  reporter.py
modules/pipeline_reporter/tests/: test_pipeline_reporter.py
modules/prospect_research/: deduplicator.py  main.py  normalizer.py
modules/prospect_research/adapters/: base.py  google_maps.py  trade_data.py
modules/prospect_research/tests/: test_adapters.py  (+1 more)
scripts/: onboard_client.py  run_daily.sh  run_weekly.sh  setup_odoo_fields.py
shared/: __init__.py  config_loader.py  llm_client.py  logger.py  odoo_client.py
